Finalização Sessao Sobre

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
               </p>
               <p>Portugês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%">100%</div>
+                <div class="w3-round-xlarge w3-center" style="height:24px;width:100%">100%</div>
               </div>
               <p>Inglês Técnico</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal-center" style="height:24px;width:50%">50%</div>
               </div>
               <br>
             </div>
@@ -100,9 +100,8 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Objetivo</h2>
-            <p>
-              Atuar na área de desenvolvimento , tendo a oportunidade de migrar da área de infraestrutura para desenvolvimento, buscando um crescimento profissional.
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+            <p>Formada em Analise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá e MBA  em Engenharia de Softwares, atualmente estou fora do mercado de trabalho em processo de  migração da área de infraestrutura para desenvolvimento. Iniciando os estudos na Linguagem Java e Frameworks voltado para Front End como AngularJs.
             </p>
           </div>
 
@@ -114,28 +113,26 @@
               <h5 class="w3-opacity"><b>Operadora de Supermercados – Caixa | Rede Economia de Supermercados</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2012 <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p><b>Responsabilidades:</b> Atender o cliente final registrando suas compras. </p>
-              <hr>
             </div>
 
 
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Operadora de Supermercados – Padaria| Rede Economia de Supermercados</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012-2012</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2012</h6>
               <p><b>Responsabilidades:</b> Cuidar da embalagem, exposição da produção do setor, limpeza do local e 
                 auxiliar na produção de produtos</p>
             </div>
 
-
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Operadora de CPD – CPD| Rede Economia de Supermercados</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012-2016</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2016</h6>
               <p><b>Responsabilidades:</b> Lançamentos de notas fiscais, controle de estoque, suporte ao usuários, 
                 abertura de chamado.</p>
             </div>
 
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Operadora de CPD – CPD| Rede Economia de Supermercados</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012-2016</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2016</h6>
               <p><b>Responsabilidades:</b>Lançamentos de notas fiscais, controle de estoque, suporte ao usuários, 
                 abertura de chamado. <br>
                 <i>Obs. Durante 04 meses atuei na área de DP, CPD e Rendição de tesouraria.</i>
@@ -144,7 +141,7 @@
 
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Supervisora TI | Rede Economia de Supermercados</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017-2019</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - 2019</h6>
               <p><b>Responsabilidades:</b> Suporte técnico ao usuário, incluindo CPD, abertura de chamados, 
                 implantaçao de projetos, compra de hardwares e rendição de férias CPD.
               </p>
@@ -152,7 +149,7 @@
 
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Gerente Junior T.I | Rede Economia de Supermercados</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019-2022</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2019 - 2022</h6>
               <p><b>Responsabilidades:</b>Responsabilidades: Gerenciar toda a infraestrutura de Hardwares, Rede e Softwares, buscando 
                 soluçoes inovadoras no mercado.<br>
                 Gerenciar dados de Backup do Sistema, Segurança, Treinamento de Equipe no uso do sistema, 
