--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
               </p>
               <p>Portugês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-center" style="height:24px;width:100%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
               </div>
               <p>Inglês Técnico</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal-center" style="height:24px;width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%"">50%</div>
               </div>
               <br>
             </div>
@@ -111,7 +111,7 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Operadora de Supermercados – Caixa | Rede Economia de Supermercados</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2012 <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2012</h6>
               <p><b>Responsabilidades:</b> Atender o cliente final registrando suas compras. </p>
             </div>
 
@@ -166,6 +166,20 @@
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
             </h2>
+
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Análise e Desenvolvimento de Sistema | Universidade Estácio de Sá </b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2019</h6>
+              <p>Conhecimentos: Qualidade de Sofwares, Engenharia de usabilidade de interfaces.</p>
+            </div>
+
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>MBA - Engenharia de Softwares | Universidade Metropolitana</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>08/2021 - 09/2022</h6>
+              <p>Conhecimentos: Ciclo de vida do Software, Teste de Qualidade, Governança de TI.</p>
+            </div>
+
+     
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
@@ -175,16 +189,11 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/70C95981/share" target="_blank">Estruturas de Repetição e Arrays em Java</a></li>
+                <li><a href="https://www.dio.me/certificate/F09FC3D7/share" target="_blank">Imersão no Spring Framework com Spring Boot</a></li>
+                <li><a href="https://www.dio.me/certificate/93DAF09B/share" target="_blank">Introdução ao framework Spring Boot</a></li>
               </ul>
               <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
             </div>
           </div>
 
@@ -220,11 +229,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://github.com/PolianaLima/" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/poliana-lima-silva-08a1a4116/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
